# pointmatcher-ros

./: .clang-format  CMakeLists.txt  README.md  package.xml
cmake/: configExtras.cmake
include/pointmatcher_ros/: Colors.h  IcpMatchesPublisher.h  PmTf.h  PointMatcherFilterIface.h  PointMatcherFilterInterface.h  RosPointCloud2Deserializer.h  StampedPointCloud.h  StampedPointCloudPublisher.h  deserialization.h  get_params_from_server.h  helper_functions.h  serialization.h  transform.h  usings.h  visualization_utils.h
pointmatcher_ros/: CMakeLists.txt  package.xml
pointmatcher_ros/include/pointmatcher_ros/: Macros.h  PmTf.h  PointMatcherFilterIface.h  StampedPointCloud.h  helper_functions.h  usings.h
pointmatcher_ros/src/: PointMatcherFilterIface.cpp  StampedPointCloud.cpp  point_cloud.cpp  transform.cpp
src/: IcpMatchesPublisher.cpp  PmTf.cpp  PointMatcherFilterInterface.cpp  RosPointCloud2Deserializer.cpp  StampedPointCloud.cpp  StampedPointCloudPublisher.cpp  deserialization.cpp  helper_functions.cpp  point_cloud.cpp  serialization.cpp  transform.cpp  visualization_utils.cpp
test/: PmTfTest.cpp  RosPointCloud2DeserializerTest.cpp  empty_test.cpp
