<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>pointmatcher_ros</name>
  <version>1.4.24</version>
  <description>Bridge between libpointmatcher and ROS.</description>
  <author email="stephane.magnenat@mavt.ethz.ch">Stéphane Magnenat</author>
  <author>Francois Pomerleau</author>
  <maintainer email="magostinucci@anybotics.com">Mathieu Agostinucci</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>new BSD</license>
  <url>https://github.com/ANYbotics/pointmatcher-ros</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
<!--   <build_depend condition="$ROS_VERSION == 1">cmake_clang_tools</build_depend> -->
  <depend>boost</depend>
  <depend condition="$ROS_VERSION == 1">eigen_conversions</depend>
  <depend>libpointmatcher</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend condition="$ROS_VERSION == 1">tf</depend>
  <depend condition="$ROS_VERSION == 1">tf_conversions</depend>
  <depend condition="$ROS_VERSION == 2">tf2</depend>
  <depend condition="$ROS_VERSION == 2">tf2_eigen</depend>
  <depend>visualization_msgs</depend>
<!--   <test_depend condition="$ROS_VERSION == 1">cmake_code_coverage</test_depend> -->
  <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
