<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>pointmatcher_ros</name>
  <version>1.4.24</version>
  <description>Bridge between libpointmatcher and ROS.</description>
  <author email="stephane.magnenat@mavt.ethz.ch">Stéphane Magnenat</author>
  <author>Francois Pomerleau</author>
  <maintainer email="magostinucci@anybotics.com">Mathieu Agostinucci</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>new BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpointmatcher</depend>
  <depend >roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  
  <test_depend>gtest</test_depend>
</package>
